# ipsdk

./: .goreleaser.yaml  .goreleaser.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  premerge.yaml  prerelease.yaml  release-test.yaml  release-to-pypi.yaml  release.yaml
docs/: development.md  exceptions.md
ipsdk/: __init__.py  client.py  connection.py  gateway.py  http.py  jsonutils.py  logger.py  metadata.py  platform.py  stringutils.py
openspec/: config.yaml
openspec/changes/archive/2026-03-19-http-request-timing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-logging-named-loggers-and-reset/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-logging-named-loggers-and-reset/specs/dependency-logger-reset/: spec.md
openspec/specs/managed-logger-registry/: spec.md
openspec/specs/response-timing/: spec.md
scripts/: check_license_headers.py
src/ipsdk/: __init__.py  connection.py  enums.py  exceptions.py  gateway.py  heuristics.py  http.py  jsonutils.py  logger.py  logging.py  metadata.py  platform.py
tests/: __init__.py  test_client.py  test_connection.py  test_enums.py  test_exceptions.py  test_gateway.py  test_heuristics.py  test_http.py  test_init.py  test_jsonutils.py  test_logger.py  test_logging.py  test_metadata.py  test_platform.py  test_stringutils.py
(+1 files in other folders)
