[project]
name = "ipsdk"
version = "0.1.0"
description = "Itential Python SDK"
authors = [
    { name="Itential, Inc.", email="support@itential.com" }
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "httpx>=0.28.1"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "q>=2.7",
    "ruff",
    "mypy",
    "coverage"
]

[build-system]
requires = ["setuptools>=61.0", "uv"]
build-backend = "setuptools.build_meta"
